<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:src="@drawable/asset3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <com.example.arsalan.k_books.FontTextViewRegular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textAllCaps="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login_subttitle"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/top_rounded_image">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:src="@drawable/baseline_person_black_18dp" />
            </FrameLayout>


            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/top_rounded_edit_text"
                style="@style/text_field_style"
                android:hint="Enter User Name"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_rounded_image">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_vertical"
                    android:src="@drawable/baseline_lock_black_18dp" />
            </FrameLayout>


            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/bottom_rounded_edit_text"
                android:hint="Enter Password"
                style="@style/text_field_style"
                 />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Password?"
            android:layout_gravity="end"
            android:textColor="#3D3D3D"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/login"
            android:textSize="24sp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:src="@drawable/asset6" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:src="@drawable/asset4" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"

                android:src="@drawable/asset5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btn_create_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/create_acc"
                android:textSize="18sp"
                android:textColor="@color/color_img"/>
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>